# discord_bot

./: .dockerignore  .gitignore  .markdownlint.rb  .pre-commit-config.yaml  .pyre_configuration  CLAUDE.md  README.md  main.py  pyproject.toml  tasks.py
.github/: CONTRIBUTING.md  TODO.md
.github/workflows/: check-test.yaml  publish.yaml
conf/: config.yaml  logger.yaml
docker/: Dockerfile  Dockerfile-test  docker-compose.yaml  healthcheck.py  test-entrypoint.sh
docs/: CONTRIBUTING.md  TODO.md
kubernetes/: argocd-app.yaml  discordbot.yaml  kustomization.yaml  sample-argocd-app.yaml.sample
lib/: __init__.py  api.py  bot.py  bot_log_context.py  config.py  config.pyi  config_parser.py  logger_extras.py  logger_setup.py  utils.py  youtube.py
lib/cogs/: basic_commands.py  tasks.py
scripts/: build.sh  check.sh  run.sh  test.sh
stubs/feedparser/: __init__.pyi
tests/: conftest.py  test_api.py  test_bot.py  test_bot_log_context.py  test_config.py  test_config_parser.py  test_logger_extras.py  test_logger_setup.py  test_main.py  test_utils.py  test_youtube.py  utils.py
tests/cogs/: test_basic_commands.py  test_tasks.py
tests/data/: config.yaml  pyproject.toml
