[project]
name = "discord_bot"
version = "0.2.11"
description = "Discord bot for Jim's Garage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click<8.2",  # 8.2+ breaks pyre-check
    "colorlog>=6.9.0",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "invoke>=2.2.0",
    "pre-commit>=4.1.0",
    "pyre-check>=0.9.23",
    "pyrefly>=0.22.2",
    "ruff>=0.12.1",
    "shellcheck-py>=0.10.0.1",
    "yamllint>=1.35.1",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.bandit]
exclude_dirs = [
    ".venv",
    "tests",
]
skips = [
    "B104",
]

# Note - Pyre does not yet consume this.  A recent commit enables it, but there has not been a fresh build of Pyre yet:
# See https://github.com/facebook/pyre-check/issues/695
#[tool.pyre]
#ignore_all_errors = [".venv"]
#site_package_search_strategy="pep561"
#source_directories = [".", ".venv", ".venv/lib/python3.13"]
#strict = true

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]

[tool.pytest.ini_options]
addopts = """
    --color=yes
    --cov=lib
    --cov=main
    --cov-branch
    --cov-fail-under=100
    --cov-report html
    --cov-report term-missing
    --verbose
    """
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
indent-width = 4
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D",
    "FBT001",
    "FBT002",
    "TRY301",
]
# COM812 - ruff recommends disabling it for compatibilitiy (and will warn you about it every time)
# D - docustring checking
# FBT001, FBT002 - ruff doesn't like boolean positional arguments
# TRY301 - No raise inside try

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "PLR0913",  # Arg count in function def
    "PLR2004",  # Magic values
    "S101"      # Use of `assert`
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.uv]
default-groups = ["dev", "test"]
