[project]
name = "discord_bot"
version = "0.7.0"
description = "Discord bot for Jim's Garage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click<8.2", # 8.2+ breaks pyre-check
    "colorlog>=6.10.1",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "feedparser>=6.0.12",
    "pyyaml>=6.0.3",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.1",
    "invoke>=2.2.1",
    "pre-commit>=4.4.0",
    "pyre-check>=0.9.23",
    "pyrefly>=0.45.2",
    "ruff>=0.14.5",
    "shellcheck-py>=0.11.0.1",
    "yamllint>=1.35.1",
]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "pytest-mock>=3.15.1",
]

[tool.bandit]
exclude_dirs = [
    ".venv",
    "tests",
]
skips = [
    "B104",
]

# Note - Pyre does not yet consume this.  A recent commit enables it, but there has not been a fresh build of Pyre yet:
# See https://github.com/facebook/pyre-check/issues/695
#[tool.pyre]
#ignore_all_errors = [".venv"]
#site_package_search_strategy="pep561"
#source_directories = [".", ".venv", ".venv/lib/python3.13"]
#strict = true

#[tool.pyrefly]
#project-includes = ["**/*"]
#project-excludes = ["**/*venv/**/*"]
[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search-path = ["stubs"]

[tool.pytest]
addopts = [
    "--color=yes",
    "--cov=lib",
    "--cov=main",
    "--cov-branch",
    "--cov-fail-under=100",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--verbose",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env = [
    "PYTEST_THEME=emacs",
    "PYTEST_THEME_MODE=dark",
]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning"
]
markers = [
    "no_mock_config: exclude the mock_config fixture",
]
#
#[tool.pytest_env]
#PYTEST_THEME = "emacs"
#PYTEST_THEME_MODE = "dark"

[tool.ruff]
indent-width = 4
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D",
    "FBT001",
    "FBT002",
    "FIX002",
    "TD003",
    "TRY301",
]
# COM812 - ruff recommends disabling it for compatibilitiy (and will warn you about it every time)
# D - docustring checking
# FBT001, FBT002 - ruff doesn't like boolean positional arguments
# FIX002 - ruff doesn't like TO-DO's
# TD003 - ruff wants issue links for TO-DO's
# TRY301 - No raise inside try

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"lib/config.py" = [
    "ANN401",   # Allow dynamically typed expressions
    "ERA001"    # False positive commented out code (pyre annotations)
]
"tests/*.py" = [
    "PLR0913",  # Arg count in function def
    "PLR2004",  # Magic values
    "S101",     # Use of `assert`
    "SLF001"    # Accessing private member
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.uv]
default-groups = ["dev", "test"]
